SoftwareEngineeringAssignment2/compiling_error.txt
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c: In function 'playGame':
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c:122:9: warning: implicit declaration of function 'chechObstacle' [-Wimplicit-function-declaration]
         chechObstacle(boar);
         ^~~~~~~~~~~~~
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c:122:23: error: 'boar' undeclared (first use in this function)
         chechObstacle(boar);
                       ^~~~
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c:122:23: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c: At top level:
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c:203:6: warning: conflicting types for 'chechObstacle'
 void chechObstacle(square board[][NUM_COLUMNS]){
      ^~~~~~~~~~~~~
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c:122:9: note: previous implicit declaration of 'chechObstacle' was here
         chechObstacle(boar);
         ^~~~~~~~~~~~~
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c: In function 'chechObstacle':
C:\Users\John\Desktop\SoftwareEngineering2\SoftwareEngineeringProject\SoftwareEngineeringAssignment2\gamePlay.c:224:24: error: 'i' undeclared (first use in this function)
       newNumObstacle = i + 1;
                        ^
